refactor: semantic changed